# calegon

./: Cargo.toml  README.md
syntax/: Cargo.toml
syntax/proptest-regressions/: symbol.txt  tests.txt
syntax/src/: arbitrary.rs  error.rs  lib.rs  parser.lalrpop  symbol.rs  tests.rs
syntax/src/ast/: bind.rs  display.rs  expr.rs  file.rs  fmt.rs  from_str.rs  mod.rs  stmt.rs  ty.rs
type-check/: Cargo.toml  neg.nfa  neg.ty  pos.nfa  pos.ty
type-check/proptest-regressions/resolve/: tests.txt
type-check/proptest-regressions/ty/automaton/ty/: tests.txt
type-check/src/: fields.rs  lib.rs  name.rs  variance.rs
type-check/src/resolve/: mod.rs  tests.rs
type-check/src/ty/: fields.rs  mod.rs  var.rs
type-check/src/ty/automaton/: build.rs  head.rs  mod.rs  state.rs  variance.rs
type-check/src/ty/automaton/dfa/: mod.rs  reduce.rs  subsume.rs  tests.rs
type-check/src/ty/automaton/nfa/: biunify.rs  build.rs  mod.rs
type-check/src/ty/automaton/scheme/: biunify.rs  flow.rs  mod.rs  tests.rs
type-check/src/ty/automaton/state/: constructor.rs  flow.rs  mod.rs  transition.rs
type-check/src/ty/automaton/ty/: build.rs  mod.rs  tests.rs
type-check/src/ty/polar/: check.rs  constraint.rs  context.rs  mod.rs  tests.rs  visitor.rs
type-system/: Cargo.toml
type-system/proptest-regressions/automaton/: tests.txt
type-system/proptest-regressions/automaton/dfa/: tests.txt
type-system/proptest-regressions/automaton/dfa/scheme/: tests.txt
type-system/proptest-regressions/automaton/dfa/ty/: tests.txt
type-system/src/: fields.rs  lib.rs  var.rs  variance.rs
type-system/src/automaton/: mod.rs  tests.rs
type-system/src/automaton/dfa/: mod.rs  reduce.rs  subsume.rs  tests.rs
type-system/src/automaton/dfa/scheme/: mod.rs  tests.rs
type-system/src/automaton/dfa/ty/: mod.rs  tests.rs
type-system/src/automaton/nfa/: biunify.rs  build.rs  mod.rs
type-system/src/automaton/nfa/scheme/: mod.rs  tests.rs
type-system/src/automaton/nfa/ty/: mod.rs  tests.rs
type-system/src/automaton/state/: constructor.rs  flow.rs  mod.rs  transition.rs
type-system/src/check/: mod.rs
type-system/src/polar/: check.rs  constraint.rs  context.rs  mod.rs  tests.rs  visitor.rs
(+10 files in other folders)
