[package]
name = "calegon-type-check"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]

[dependencies]
seahash = "~3"
typed-arena = "~1.4"
hash_hasher = "~1"
iter-set = "0.2.0"

[dependencies.calegon-syntax]
path = "../syntax"

[dev-dependencies]
proptest = "0.8.6"

[dev-dependencies.calegon-syntax]
path = "../syntax"
features = ["proptest"]
