[package]
name = "calegon-type-system"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]

[dependencies]
seahash = "~3"
typed-arena = "~1.4"
hash_hasher = "~1"
iter-set = "0.2.0"
itertools = "0.7.8"
int_hash = "0.1.1"
im = "~12"

[dependencies.calegon-syntax]
path = "../syntax"

[dev-dependencies]
proptest = "0.8.7"
lazy_static = "~1"

[dev-dependencies.calegon-syntax]
path = "../syntax"
features = ["arbitrary"]
